<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear"/>
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_scan"/>
    <item
        android:id="@+id/action_stop"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_stop"
        android:visible="false"/>
    <item
        android:id="@+id/action_dump"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_dump" />
</menu>