<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linear_layout_check_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:textSize="30dp"-->
            <!--android:background="@color/colorSkyBlue"-->
            <!--android:text="@string/check_title"/>-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/check_big" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_check_button"
        android:layout_below="@id/linear_layout_check_title"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:id="@+id/check_btn_dis1"
            android:background="@drawable/near1"/>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:id="@+id/check_btn_dis2"
            android:background="@drawable/near2"/>

        <TextView
            android:id="@+id/timmer"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="TextView" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/relative_layout_check_bar"
        android:layout_below="@id/linear_layout_check_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:text="@string/whole_people"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:id="@+id/check_whole_people"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/textborder"
            android:text="36"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/present_people"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:id="@+id/check_present_people"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/textborder"
            android:text="32"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/absent_people"
            android:textSize="20sp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:id="@+id/check_absent_people"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/textborder"
            android:text=" 4 "/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_layout_check_bar"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:id="@+id/test_layout_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
    </ScrollView>
</RelativeLayout>