<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/colorWhite">
    <LinearLayout
        android:id="@+id/linear_layout_title"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/welcom" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_title">
       <ImageView
          android:layout_marginTop="10dp"
          android:id="@+id/imageView_main"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:src="@drawable/icon_big" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_image"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout_main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/tour_name"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/main_tour_input"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:text="SSS点呼観光ツアー"
                android:textColor="@color/colorBlack"
                android:gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/textborder"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout_main"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/people_counting"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/main_people_counting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:background="@drawable/textborder"
                android:textSize="15sp"
                android:text="10人"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/appointment_time"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/main_appointment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="8時間"
                android:textColor="@color/colorBlack"
                android:background="@drawable/textborder"
                android:textSize="15sp"/>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/relativelayout_main"
        android:layout_marginTop="15dp"
        android:background="@drawable/chech" />

    <Button
        android:id="@+id/btn_check_absence"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="17dp"
        android:layout_below="@id/btn_check"
        android:background="@drawable/pickup" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="17dp"
        android:layout_below="@id/btn_check_absence"
        android:background="@drawable/set" />

    <Button
        android:id="@+id/btn_ble_test"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/colorSkyBlue"
        android:textColor="@color/colorPrimary"
        android:text="BLE Scan"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/btn_settings"/>



</RelativeLayout>
